--- a/index.html
+++ b/index.html
@@ -3,42 +3,69 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>spoon</title>
-    <link rel="stylesheet" href="CCS/normalize.css">
-    <link rel="stylesheet" href="CCS/basic.css">
-    <link rel="stylesheet" href="CCS/sections/grettings.css">
+    <title>Spoon</title>
+    <link rel="stylesheet" href="CSS/normalize.css">
+    <link rel="stylesheet" href="CSS/basic.css">
+    <link rel="stylesheet" href="CSS/sections/grettings.css">
 </head>
 <body>
-    <div class="grettings">
+    <!-- секция grattings -->
+    <section class="grettings">
         <div class="container">
             <!-- шапка -->
             <header class="header">
                 <!-- логотип -->
-                 <div class="logo">
+                <div class="logo">
                     <a href="index.html">
                         <img src="IMG/grettings/logo.svg" alt="логотип Spoon">
                     </a>
-                 </div>
-                 <!-- навигация -->
-                  <nav class="nav">
+                </div>
+                <!-- навигация -->
+                 <nav class="nav">
                     <ul class="nav__list">
                         <li class="nav__item"><a href="#">Premium</a></li>
                         <li class="nav__item"><a href="#">Pricing</a></li>
                         <li class="nav__item"><a href="#">About</a></li>
                         <li class="nav__item square"></li>
                         <li class="nav__item"><a href="#">Sign in</a></li>
-                        <li class="nav__item"><a href="#">Started</a></li>
+                        <li class="nav__item"><a href="#">Get Started</a></li>
                     </ul>
-                  </nav>
+                 </nav>
             </header>
 
-
             <div class="grettings__content">
-                <div class="grettings__title">Propel y our business</div>
+                <div class="grettings__title">Propel y our business.</div>
                 <div class="grettings__text">Propel comes with e verything you need to get your business rolling.</div>
-                <button class="grettings__btn">Get Started</button>
+                <button class="btn grettings__btn">Get Started</button>
             </div>
         </div>
-    </div>
+    </section>
+
+    <!-- секция service -->
+     <section class="service">
+        <div class="container">
+            <div class="service__info">Promoting your business and services with Propel: A responsive,
+                 multi-page business template with everything you need propel your business.</div>
+
+                 <ul class="servise__list">
+                    <li class="service__card">
+                        <img src="" alt="картинка 1" class="service__icon">
+                        <div class="service__title"></div>
+                        <div class="service__text"></div>
+                    </li>
+                    <li class="service__card">
+                        <img src="" alt="картинка 2" class="service__icon">
+                        <div class="service__title"></div>
+                        <div class="service__text"></div>
+                    </li>
+                    <li class="service__card">
+                        <img src="" alt="картинка 3" class="service__icon">
+                        <div class="service__title"></div>
+                        <div class="service__text"></div>
+                    </li>
+                 </ul>
+        </div>
+     </section>
+
 </body>
 </html>
