--- a/Spoon-16-20-main/index.html
+++ b/Spoon-16-20-main/index.html
@@ -5,10 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Spoon</title>
-    <link rel="stylesheet" href="CSS/normalize.css">
-    <link rel="stylesheet" href="CSS/basic.css">
-    <link rel="stylesheet" href="CSS/sections/grettings.css">
-    <link rel="stylesheet" href="CSS/sections/service.css">
+    <link rel="stylesheet" href="CSS/main.css">
 </head>
 
 <body>
@@ -74,6 +71,74 @@
             </ul>    
         </div>
     </section>
+
+
+
+    <!-- секция advert -->
+     <section class="advert">
+        <div class="advent__container">
+            <img src="IMG/advert/IMAGE (5).png" alt="картинка">
+        </div>
+
+
+        <div class="container">
+            <div class="advert__contant">
+                <div class="advert__info info">
+                    <span>Illud decore voluptaria has at.</span>
+                    Hinc invenire atomorum no vel.
+                    Ut vis nullam blandit neglegentur, omittam perpetua voluptatum qui eu.
+                    Iusto laoreet suscipit vis ad, ad ferri tempor duo.
+                   </div>
+
+                   <a href="#" class="link advert__link">More About Us</a>
+            </div>
+        </div>
+     </section>
+
+
+
+
+
+     <!-- секция offers -->
+      <section class="offers">
+        <div class="container">
+            <ul class="offers__list">
+                <li class="offers__item">
+                    <img src="IMG/offers/IMAGE (4).png" alt="1 картинка">
+                    <div class="offers__contant">
+                        <div class="offers__info info">
+                            <span>Ex tempor euismod sapientem ouis lexor pro.</span>
+                            Ad vix dicta iudico singulis, ius ex mollis veritus.
+                          </div>
+                          <div class="offers__text">
+                            Possit tritani consectetuer eu his, nusquam minimum ut per, eu eos ocurreret splendide hendrerit. 
+                            Dicant placerat democritum eos id, sit mollis invidunt mediocritatem ei, ne fuisset dolores periculis sed.
+                          </div>
+                    </div>
+                </li>
+                <li class="offers__item">
+                    <div class="offers__contant">
+                        <div class="offers__info info">
+                            <span>Te elit antiopam vix zril recusabo ut pri.</span>
+                            Quas suscipit ad mea verear vivendo tincidunt.
+                          </div>
+                          <div class="offers__text">
+                            Pri cu dico labores officiis, odio principes complectitur ad sea. 
+                            Sea id doctus forensibus, nec lorem vocent aliquam eu.
+                            Aliquid definitiones id cum, ad meliore perpetua referrentur sed. 
+                            Quas suscipit ad mea verear vivendo tincidunt.
+                          </div>
+                    </div>
+                    <img src="IMG/offers/IMAGE (3).png" alt="2 картинка">
+                </li>
+            </ul>
+
+            <div class="offers__data">
+                <div class="offers__data-text">Wanna know more about the Premium deal?</div>
+                <a href="#" class="link offers__link">See the full range of Premium</a>
+            </div>
+        </div>
+      </section>
 
 
 
