--- a/Spoon-16-20-main/index.html
+++ b/Spoon-16-20-main/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8"> 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Spoon</title>
     <link rel="stylesheet" href="CSS/main.css">
@@ -30,6 +30,12 @@
                         <li class="nav__item"><a href="#">Sign in</a></li>
                         <li class="nav__item"><a href="#">Get Started</a></li>
                     </ul>
+
+                    <ul class="burger-menu">
+                        <li class="burger-menu__line"></li>
+                        <li class="burger-menu__line"></li>
+                        <li class="burger-menu__line"></li>
+                    </ul>
                 </nav>
             </header>
             <div class="grettings__content">
@@ -43,10 +49,13 @@
     <!-- секция service -->
     <section class="service">
         <div class="container">
-            <div class="service__info info"><span>Promoting your business and services with Propel:</span> A responsive, multi-page
+            <div class="service__info info">
+                <span>Promoting your business and services with Propel:</span>
+                A responsive, multi-page
                 business template with everything you need
-                propel your business.</div>
-            
+                propel your business.
+            </div>
+
             <ul class="service__list">
                 <!-- 1 карточка -->
                 <li class="service__card">
@@ -66,54 +75,52 @@
                 <li class="service__card">
                     <img src="IMG/service/pic3.svg" alt="картинка 3" class="service__icon">
                     <div class="service__title">Reformidans eis</div>
-                    <div class="service__text">Facer nostro causae ei sed. Vix ex quidam detraxit, vis ad nostro laoreet.</div>
+                    <div class="service__text">Facer nostro causae ei sed. Vix ex quidam detraxit, vis ad nostro
+                        laoreet.</div>
                 </li>
-            </ul>    
+            </ul>
         </div>
     </section>
 
 
-
     <!-- секция advert -->
-     <section class="advert">
-        <div class="advent__container">
-            <img src="IMG/advert/IMAGE (5).png" alt="картинка">
+    <section class="advert">
+        <div class="advert__container">
+            <img src="IMG/advert/pic.png" alt="картинка">
         </div>
-
 
         <div class="container">
             <div class="advert__contant">
                 <div class="advert__info info">
                     <span>Illud decore voluptaria has at.</span>
-                    Hinc invenire atomorum no vel.
-                    Ut vis nullam blandit neglegentur, omittam perpetua voluptatum qui eu.
-                    Iusto laoreet suscipit vis ad, ad ferri tempor duo.
-                   </div>
+                    Hinc invenire atomorum no vel. Ut vis nullam blandit neglegentur,
+                    omittam perpetua voluptatum qui
+                    eu. Iusto laoreet
+                    suscipit vis ad, ad ferri tempor duo.
+                </div>
 
-                   <a href="#" class="link advert__link">More About Us</a>
+                <a href="#" class="link advert__link">More About Us</a>
             </div>
         </div>
-     </section>
+
+    </section>
 
 
-
-
-
-     <!-- секция offers -->
-      <section class="offers">
+    <!-- секция offers -->
+    <section class="offers">
         <div class="container">
             <ul class="offers__list">
                 <li class="offers__item">
-                    <img src="IMG/offers/IMAGE (4).png" alt="1 картинка">
+                    <img src="IMG/offers/pic1.png" alt="1 картинка">
                     <div class="offers__contant">
                         <div class="offers__info info">
                             <span>Ex tempor euismod sapientem ouis lexor pro.</span>
                             Ad vix dicta iudico singulis, ius ex mollis veritus.
-                          </div>
-                          <div class="offers__text">
-                            Possit tritani consectetuer eu his, nusquam minimum ut per, eu eos ocurreret splendide hendrerit. 
-                            Dicant placerat democritum eos id, sit mollis invidunt mediocritatem ei, ne fuisset dolores periculis sed.
-                          </div>
+                        </div>
+                        <div class="offers__text">Possit tritani consectetuer eu his, nusquam minimum ut per, eu eos
+                            ocurreret splendide hendrerit. Dicant placerat
+                            democritum eos id, sit mollis invidunt mediocritatem ei, ne fuisset dolores periculis sed.
+                        </div>
                     </div>
                 </li>
                 <li class="offers__item">
@@ -121,15 +128,14 @@
                         <div class="offers__info info">
                             <span>Te elit antiopam vix zril recusabo ut pri.</span>
                             Quas suscipit ad mea verear vivendo tincidunt.
-                          </div>
-                          <div class="offers__text">
-                            Pri cu dico labores officiis, odio principes complectitur ad sea. 
-                            Sea id doctus forensibus, nec lorem vocent aliquam eu.
-                            Aliquid definitiones id cum, ad meliore perpetua referrentur sed. 
-                            Quas suscipit ad mea verear vivendo tincidunt.
-                          </div>
+                        </div>
+                        <div class="offers__text">Pri cu dico labores officiis, odio principes complectitur ad sea. Sea
+                            id doctus forensibus, nec lorem vocent aliquam eu.
+                            Aliquid definitiones id cum, ad meliore perpetua referrentur sed. Quas suscipit ad mea
+                            verear vivendo tincidunt.
+                        </div>
                     </div>
-                    <img src="IMG/offers/IMAGE (3).png" alt="2 картинка">
+                    <img src="IMG/offers/pic2.png" alt="картинка 2">
                 </li>
             </ul>
 
@@ -137,14 +143,70 @@
                 <div class="offers__data-text">Wanna know more about the Premium deal?</div>
                 <a href="#" class="link offers__link">See the full range of Premium</a>
             </div>
+
         </div>
-      </section>
+    </section>
+
+    <!-- секция party -->
+     <section class="party">
+        <div class="container">
+            <div class="party__content">
+                <div class="party__info-block">
+                    <div class="party__text">Party On</div>
+                    <div class="party__info info">
+                        <span>Quas suscipit ad mea.</span>
+                        Pri cu dico labores officiis odio principes complectitur ad sea.
+                    </div>
+                </div>
+                <div class=""><button class="btn party__btn">Get Started</button></div>
+            </div>
+        </div>
+     </section>
 
 
+     <footer class="footer">
+        <div class="container">
+            <div class="footer__content">
+                <div class="footer__info-block">
+                    <!-- логотип -->
+                    <div class="logo">
+                        <a href="index.html">
+                            <img src="IMG/grettings/logo.svg" alt="логотип Spoon">
+                        </a>
+                    </div>
+                    <div class="footer__text">© 2018 Spoon Inc, All rights reserved.</div>
+                </div>
 
+                <nav class="footer__nav">
+                    <ul class="footer__list">
+                        <!-- 1 -->
+                         <div class="footer__column">
+                            <li class="footer__item"><a href="#">Features</a></li>
+                            <li class="footer__item"><a href="#">Premium</a></li>
+                            <li class="footer__item"><a href="#">Pricing</a></li>
+                         </div>
+                         <!-- 2 -->
+                        <div class="footer__column">
+                            <li class="footer__item"><a href="#">About</a></li>
+                            <li class="footer__item"><a href="#">Blog</a></li>
+                            <li class="footer__item"><a href="#">Contact</a></li>
+                        </div>
+                        <!-- 3 -->
+                        <div class="footer__column">
+                            <li class="footer__item"><a href="#">Image License Info</a></li>
+                            <li class="footer__item"><a href="#">Powered by Webflow</a></li>
+                        </div>
+                    </ul> 
 
-
-    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+                    <div class="footer__social">
+                        <a href="#" class="footer__link"><img src="IMG/footer/1.svg" alt="1"></a>
+                        <a href="#" class="footer__link"><img src="IMG/footer/2.svg" alt="2"></a>
+                        <a href="#" class="footer__link"><img src="IMG/footer/3.svg" alt="3"></a>
+                    </div>
+                </nav> 
+            </div>
+        </div>
+     </footer>
 </body>
 
 </html>
